src/objects/BT_CO_ARMS_ExportCustomerInvoice__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <label>accountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <label>accountType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feUniqueKey__c</fullName>
        <label>feUniqueKey</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceAmount__c</fullName>
        <label>invoiceAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceDate__c</fullName>
        <label>invoiceDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceDueDate__c</fullName>
        <label>invoiceDueDate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceNumber__c</fullName>
        <label>invoiceNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceOutstandingAmount__c</fullName>
        <label>invoiceOutstandingAmount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>synonym__c</fullName>
        <label>synonym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_ExportCustomerInvoice</label>
    <nameField>
        <label>BT_CO_ARMS_CreateCustAccountResponseFile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_ExportCustomerInvoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>